--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -255,12 +255,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xdt-fJ-TV1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-684" y="-47.226386806596707"/>
+            <point key="canvasLocation" x="-862" y="81"/>
         </scene>
-        <!--View Controller-->
+        <!--Account Settings Controller-->
         <scene sceneID="15F-v9-K4l">
             <objects>
-                <viewController id="vxZ-tb-7yJ" sceneMemberID="viewController">
+                <viewController id="vxZ-tb-7yJ" customClass="AccountSettingsController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1i7-M7-WKN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -272,6 +272,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vxZ-tb-7yJ" id="baZ-u2-LFX"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Surname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="azT-c6-3C2">
                                 <rect key="frame" x="68" y="360" width="238" height="30"/>
@@ -280,7 +283,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UZ9-w0-tLt">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="UZ9-w0-tLt">
                                 <rect key="frame" x="102" y="111" width="171" height="171"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
@@ -327,6 +330,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="VJL-NC-gW9"/>
                     </view>
+                    <connections>
+                        <outlet property="adressTf" destination="QWV-zq-aRw" id="kmc-r9-gey"/>
+                        <outlet property="emailTf" destination="LQb-hl-hgv" id="6on-QM-Hdp"/>
+                        <outlet property="nameTf" destination="ek0-dO-Tnq" id="Fzg-Zr-OKW"/>
+                        <outlet property="surnameTf" destination="azT-c6-3C2" id="r22-sT-gcZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mxL-sL-DqO" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="yWu-Vp-uSw" userLabel="Exit" sceneMemberID="exit"/>
@@ -377,7 +386,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vpr-23-b5i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1532" y="812"/>
+            <point key="canvasLocation" x="-726" y="888"/>
         </scene>
         <!--Detail shoe - View Controller-->
         <scene sceneID="nqH-ge-caI">
@@ -680,14 +689,6 @@
                                 <rect key="frame" x="71" y="80" width="233" height="212"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ybZ-Hu-H50">
-                                <rect key="frame" x="0.0" y="36" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="barTintColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <items>
-                                    <navigationItem id="JYJ-yd-h6Y"/>
-                                </items>
-                            </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m79-0B-UnU">
                                 <rect key="frame" x="37" y="531" width="179" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -715,7 +716,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gv3-4l-9K3" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Q5n-Uc-SOh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="208.80000000000001" y="13.943028485757123"/>
+            <point key="canvasLocation" x="318" y="143"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="exR-GD-NBn">
@@ -1033,7 +1034,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rVW-m2-lJs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1623.2" y="-47.226386806596707"/>
+            <point key="canvasLocation" x="-1646" y="81"/>
         </scene>
     </scenes>
     <resources>
