--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -218,22 +218,27 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="Mvc-3K-qJm">
                                         <rect key="frame" x="0.0" y="0.0" width="359" height="424"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ye5-1Q-sEg">
-                                        <rect key="frame" x="0.0" y="432" width="359" height="30"/>
-                                        <state key="normal" title="Cesta"/>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XhD-XB-k9c">
-                                        <rect key="frame" x="0.0" y="470" width="359" height="30"/>
+                                        <rect key="frame" x="0.0" y="432" width="359" height="30"/>
                                         <state key="normal" title="Perfil"/>
                                         <connections>
                                             <segue destination="vxZ-tb-7yJ" kind="show" id="nmb-tX-66Q"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xPO-5f-uUl">
-                                        <rect key="frame" x="0.0" y="508" width="359" height="30"/>
+                                        <rect key="frame" x="0.0" y="470" width="359" height="30"/>
                                         <state key="normal" title="Ayuda"/>
                                         <connections>
                                             <segue destination="7BE-7J-8en" kind="show" identifier="helpSege" id="tHm-je-e63"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3R-ow-dOg">
+                                        <rect key="frame" x="0.0" y="508" width="359" height="30"/>
+                                        <state key="normal" title="Cerrar sesión">
+                                            <color key="titleColor" red="1" green="0.084728803970000002" blue="0.1011062237" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="logOut:" destination="re6-Gc-JoJ" eventType="touchUpInside" id="rCq-L2-vEn"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -252,7 +257,7 @@
                     <navigationItem key="navigationItem" id="sW8-5J-Kjg"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <segue destination="Myv-fe-aFt" kind="show" id="1Va-5w-8AP"/>
+                        <segue destination="Myv-fe-aFt" kind="show" identifier="toLogin" id="1Va-5w-8AP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xdt-fJ-TV1" userLabel="First Responder" sceneMemberID="firstResponder"/>
